# fox

./: .gitignore  .ocamlformat  PLAN.md  README.md  dune  dune-project  fox-oxcaml-handoff.md  fox.opam  fox.opam.locked  fox.opam.template
.github/workflows/: build.yml
example/: dune  fox_examples.ml  linear_regression.ml  mnist.ml
lib/: dune  expr.ml  expr.mli  id.ml  op.ml  ox.ml  tensor.ml  tensor.mli  treeable.ml  treeable_intf.ml  value.ml  value.mli  value0.mli  value_tree.ml  value_tree.mli
lib/core/: dune  expr.ml  expr.mli  fox_core.ml  fox_effect.ml  fox_effect.mli  handler.ml  handler.mli  id.ml  id.mli  jvp.ml  jvp.mli  op.ml  op.mli  operators_intf.ml  ox_core.ml  partial_eval.ml  partial_eval.mli  shape.ml  shape.mli  staging.ml  staging.mli  tensor.ml  tensor.mli  treeable.ml  treeable.mli  treeable_intf.ml  type.ml  type.mli  value.ml  value.mli  value0.ml  value0.mli  value_tree.ml  value_tree.mli
lib/jit/: dune  fox_jit.ml  ox_jit.ml
lib/torch/: README.md  dune  pytorch.ml  pytorch.mli
test/: dune  test_eval_backends.ml  test_fox.ml  test_gradcheck.ml  test_handler.ml  test_jvp.ml  test_linear_regression.ml  test_op.ml  test_ox.ml  test_partial_eval.ml  test_robustness.ml  test_staging.ml
